# handmusic

./: .gitignore  README.md  pyproject.toml
handmusic/: __main__.py  handmusic.py
